# sherpa

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  vcpkg.json
.github/workflows/: ci.yml  publish-homebrew.yml  publish-pypi.yml  release.yml
benchmarks/: README.md  index_benchmark.cpp
cmake/: SherpaConfig.cmake.in
docs/: architecture.md  database-format.md  editor-integration.md  graph-export-schema-v1.json  graph-export.md  indexing.md  installation.md  limitations.md  plugin-api.md  public-api.md  query-json.md  querying.md  releasing.md
docs/adr/: 0001-modular-monolith.md  0002-tree-sitter-frontends.md  0003-evidence-bearing-relationships.md  0004-read-only-call-queries.md  0005-evidence-bounded-impact-analysis.md  0006-certainty-first-path-tracing.md  0007-versioned-deterministic-graph-export.md  0008-atomic-incremental-indexing.md  0009-versioned-public-cpp-api.md  0010-explicit-in-process-plugin-foundation.md  0011-versioned-stdio-editor-protocol.md  0012-python-language-support.md  0013-attested-multi-channel-releases.md
editors/vscode/: README.md  package.json
editors/vscode/src/: extension.js  jsonRpcClient.js
editors/vscode/test/: json_rpc_client.test.js  server_integration.test.js
include/sherpa/: version.hpp.in
include/sherpa/analysis/: relationship_resolver.hpp
include/sherpa/api/: client.hpp  plugin.hpp
include/sherpa/application/: call_query_service.hpp  file_query_service.hpp  graph_export_service.hpp  impact_service.hpp  index_service.hpp  path_service.hpp  query_errors.hpp  symbol_query_service.hpp
include/sherpa/domain/: call_query.hpp  file_query.hpp  file_record.hpp  graph_export.hpp  graph_snapshot.hpp  impact.hpp  indexed_file.hpp  path_query.hpp  relationship.hpp  symbol_query.hpp  syntax.hpp
include/sherpa/parsing/: tree_sitter_frontend.hpp
include/sherpa/presentation/: call_query_renderer.hpp  file_query_renderer.hpp  graph_export_renderer.hpp  impact_renderer.hpp  path_renderer.hpp  query_error_renderer.hpp  symbol_query_renderer.hpp
include/sherpa/scanner/: repository_scanner.hpp
include/sherpa/storage/: sqlite_database.hpp
include/sherpa/util/: fingerprint.hpp
migrations/: 001_initial.sql  002_syntax.sql  003_relationships.sql  004_call_sites.sql
packaging/python/: README.md  pyproject.toml  setup.py
packaging/python/sherpa_cli/: __init__.py
packaging/scripts/: release_tools.py
packaging/tests/: test_release_tools.py
ports/tree-sitter-c/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/tree-sitter-cpp/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/tree-sitter-python/: CMakeLists.txt  portfile.cmake  vcpkg.json
src/analysis/: relationship_resolver.cpp
src/api/: client.cpp  plugin.cpp
src/application/: call_query_service.cpp  file_query_service.cpp  graph_export_service.cpp  graph_query_support.cpp  graph_query_support.hpp  impact_service.cpp  index_service.cpp  path_service.cpp  query_errors.cpp  symbol_query_service.cpp
src/cli/: graph_export_command.cpp  graph_export_command.hpp  main.cpp
src/domain/: call_query.cpp  file_query.cpp  graph_export.cpp  impact.cpp  path_query.cpp  relationship.cpp  symbol_query.cpp  syntax.cpp
src/parsing/: tree_sitter_frontend.cpp
src/presentation/: call_query_renderer.cpp  file_query_renderer.cpp  graph_export_renderer.cpp  impact_renderer.cpp  json_writer.hpp  path_renderer.cpp  query_error_renderer.cpp  symbol_query_renderer.cpp
src/scanner/: repository_scanner.cpp
src/server/: json_rpc_server.cpp  json_rpc_server.hpp  main.cpp
src/storage/: schema_sql.hpp.in  sqlite_database.cpp
src/util/: fingerprint.cpp
tests/cli/: call_queries.cmake  export.cmake  impact.cmake  index_fixture.cmake  path.cmake  python.cmake  query.cmake
tests/consumer/: api_consumer.cpp  install_consumer.cmake
tests/consumer/project/: CMakeLists.txt
tests/fixtures/basic_cpp/: README.md
tests/fixtures/basic_cpp/include/: calculator.hpp
tests/fixtures/basic_cpp/src/: calculator.cpp  main.cpp
tests/fixtures/impact/include/: base.hpp  wrapper.hpp
tests/fixtures/impact/src/: graph.cpp  main.cpp
tests/fixtures/python/: native.cpp
tests/fixtures/python/app/: main.py  service.py  types.pyi  utils.py
tests/fixtures/query_ambiguity/src/: first.cpp  main.cpp  second.cpp
tests/fixtures/relationships/include/: api.hpp
tests/fixtures/relationships/include/a/: common.hpp
tests/fixtures/relationships/include/b/: common.hpp
tests/fixtures/relationships/src/: api.cpp  main.cpp
tests/fixtures/syntax_cpp/include/: widget.hpp
tests/fixtures/syntax_cpp/src/: arithmetic.c  malformed.cpp  widget.cpp
tests/fixtures/syntax_python/: malformed.py
tests/integration/: call_query_service_test.cpp  file_query_service_test.cpp  graph_export_service_test.cpp  impact_service_test.cpp  index_service_test.cpp  path_service_test.cpp  public_api_test.cpp  server_test.cpp  symbol_query_service_test.cpp
tests/server/: process.cmake
tests/unit/: call_query_renderer_test.cpp  file_query_renderer_test.cpp  fingerprint_test.cpp  impact_renderer_test.cpp  path_renderer_test.cpp  plugin_test.cpp  query_error_renderer_test.cpp  relationship_resolver_test.cpp  repository_scanner_test.cpp  symbol_query_renderer_test.cpp  tree_sitter_frontend_test.cpp
